parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> Comandos
Rule 2     Comandos -> Comando Comandos
Rule 3     Comandos -> Comando
Rule 4     Comando -> Valores
Rule 5     Comando -> Operadores
Rule 6     Comando -> Declaracao
Rule 7     Comando -> Print
Rule 8     Comando -> Operacao
Rule 9     Comando -> Condicional
Rule 10    Comando -> Ciclo
Rule 11    Comando -> DEFINED_WORD
Rule 12    Condicional -> IF Comandos ELSE Comandos THEN
Rule 13    Condicional -> IF Comandos ELSE THEN
Rule 14    Condicional -> IF Comandos THEN
Rule 15    Condicional -> IF THEN
Rule 16    Ciclo -> DO Comandos LOOP
Rule 17    Operacao -> KEY
Rule 18    Operacao -> DUP
Rule 19    Operacao -> 2DUP
Rule 20    Operacao -> SWAP
Rule 21    Operacao -> DROP
Rule 22    Print -> STRING
Rule 23    Print -> EMIT
Rule 24    Print -> DOT
Rule 25    Print -> CHAR
Rule 26    Print -> SPACE
Rule 27    Print -> SPACES
Rule 28    Print -> CR
Rule 29    Valores -> INT
Rule 30    Declaracao -> DeclaracaoF
Rule 31    Declaracao -> DeclaracaoV
Rule 32    DeclaracaoF -> NAME Comandos SEMICOLON
Rule 33    DeclaracaoV -> VARIABLE
Rule 34    DeclaracaoV -> EXCLAMATION
Rule 35    DeclaracaoV -> AT
Rule 36    Operadores -> PLUS
Rule 37    Operadores -> MINUS
Rule 38    Operadores -> TIMES
Rule 39    Operadores -> DIVIDE
Rule 40    Operadores -> MOD
Rule 41    Operadores -> SUPEQ
Rule 42    Operadores -> INFEQ
Rule 43    Operadores -> INFERIOR
Rule 44    Operadores -> SUPERIOR
Rule 45    Operadores -> EQUALS

Terminals, with rules where they appear

2DUP                 : 19
AT                   : 35
CHAR                 : 25
CR                   : 28
DEFINED_WORD         : 11
DIVIDE               : 39
DO                   : 16
DOT                  : 24
DROP                 : 21
DUP                  : 18
ELSE                 : 12 13
EMIT                 : 23
EQUALS               : 45
EXCLAMATION          : 34
IF                   : 12 13 14 15
INFEQ                : 42
INFERIOR             : 43
INT                  : 29
KEY                  : 17
LOOP                 : 16
MINUS                : 37
MOD                  : 40
NAME                 : 32
PLUS                 : 36
SEMICOLON            : 32
SPACE                : 26
SPACES               : 27
STRING               : 22
SUPEQ                : 41
SUPERIOR             : 44
SWAP                 : 20
THEN                 : 12 13 14 15
TIMES                : 38
VARIABLE             : 33
error                : 

Nonterminals, with rules where they appear

Ciclo                : 10
Comando              : 2 3
Comandos             : 1 2 12 12 13 14 16 32
Condicional          : 9
Declaracao           : 6
DeclaracaoF          : 30
DeclaracaoV          : 31
Operacao             : 8
Operadores           : 5
Print                : 7
Valores              : 4
inicio               : 0

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . Comandos
    (2) Comandos -> . Comando Comandos
    (3) Comandos -> . Comando
    (4) Comando -> . Valores
    (5) Comando -> . Operadores
    (6) Comando -> . Declaracao
    (7) Comando -> . Print
    (8) Comando -> . Operacao
    (9) Comando -> . Condicional
    (10) Comando -> . Ciclo
    (11) Comando -> . DEFINED_WORD
    (29) Valores -> . INT
    (36) Operadores -> . PLUS
    (37) Operadores -> . MINUS
    (38) Operadores -> . TIMES
    (39) Operadores -> . DIVIDE
    (40) Operadores -> . MOD
    (41) Operadores -> . SUPEQ
    (42) Operadores -> . INFEQ
    (43) Operadores -> . INFERIOR
    (44) Operadores -> . SUPERIOR
    (45) Operadores -> . EQUALS
    (30) Declaracao -> . DeclaracaoF
    (31) Declaracao -> . DeclaracaoV
    (22) Print -> . STRING
    (23) Print -> . EMIT
    (24) Print -> . DOT
    (25) Print -> . CHAR
    (26) Print -> . SPACE
    (27) Print -> . SPACES
    (28) Print -> . CR
    (17) Operacao -> . KEY
    (18) Operacao -> . DUP
    (19) Operacao -> . 2DUP
    (20) Operacao -> . SWAP
    (21) Operacao -> . DROP
    (12) Condicional -> . IF Comandos ELSE Comandos THEN
    (13) Condicional -> . IF Comandos ELSE THEN
    (14) Condicional -> . IF Comandos THEN
    (15) Condicional -> . IF THEN
    (16) Ciclo -> . DO Comandos LOOP
    (32) DeclaracaoF -> . NAME Comandos SEMICOLON
    (33) DeclaracaoV -> . VARIABLE
    (34) DeclaracaoV -> . EXCLAMATION
    (35) DeclaracaoV -> . AT

    DEFINED_WORD    shift and go to state 11
    INT             shift and go to state 12
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 16
    MOD             shift and go to state 17
    SUPEQ           shift and go to state 18
    INFEQ           shift and go to state 19
    INFERIOR        shift and go to state 20
    SUPERIOR        shift and go to state 21
    EQUALS          shift and go to state 22
    STRING          shift and go to state 25
    EMIT            shift and go to state 26
    DOT             shift and go to state 27
    CHAR            shift and go to state 28
    SPACE           shift and go to state 29
    SPACES          shift and go to state 30
    CR              shift and go to state 31
    KEY             shift and go to state 32
    DUP             shift and go to state 33
    2DUP            shift and go to state 34
    SWAP            shift and go to state 35
    DROP            shift and go to state 36
    IF              shift and go to state 37
    DO              shift and go to state 38
    NAME            shift and go to state 39
    VARIABLE        shift and go to state 40
    EXCLAMATION     shift and go to state 41
    AT              shift and go to state 42

    inicio                         shift and go to state 1
    Comandos                       shift and go to state 2
    Comando                        shift and go to state 3
    Valores                        shift and go to state 4
    Operadores                     shift and go to state 5
    Declaracao                     shift and go to state 6
    Print                          shift and go to state 7
    Operacao                       shift and go to state 8
    Condicional                    shift and go to state 9
    Ciclo                          shift and go to state 10
    DeclaracaoF                    shift and go to state 23
    DeclaracaoV                    shift and go to state 24

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> Comandos .

    $end            reduce using rule 1 (inicio -> Comandos .)


state 3

    (2) Comandos -> Comando . Comandos
    (3) Comandos -> Comando .
    (2) Comandos -> . Comando Comandos
    (3) Comandos -> . Comando
    (4) Comando -> . Valores
    (5) Comando -> . Operadores
    (6) Comando -> . Declaracao
    (7) Comando -> . Print
    (8) Comando -> . Operacao
    (9) Comando -> . Condicional
    (10) Comando -> . Ciclo
    (11) Comando -> . DEFINED_WORD
    (29) Valores -> . INT
    (36) Operadores -> . PLUS
    (37) Operadores -> . MINUS
    (38) Operadores -> . TIMES
    (39) Operadores -> . DIVIDE
    (40) Operadores -> . MOD
    (41) Operadores -> . SUPEQ
    (42) Operadores -> . INFEQ
    (43) Operadores -> . INFERIOR
    (44) Operadores -> . SUPERIOR
    (45) Operadores -> . EQUALS
    (30) Declaracao -> . DeclaracaoF
    (31) Declaracao -> . DeclaracaoV
    (22) Print -> . STRING
    (23) Print -> . EMIT
    (24) Print -> . DOT
    (25) Print -> . CHAR
    (26) Print -> . SPACE
    (27) Print -> . SPACES
    (28) Print -> . CR
    (17) Operacao -> . KEY
    (18) Operacao -> . DUP
    (19) Operacao -> . 2DUP
    (20) Operacao -> . SWAP
    (21) Operacao -> . DROP
    (12) Condicional -> . IF Comandos ELSE Comandos THEN
    (13) Condicional -> . IF Comandos ELSE THEN
    (14) Condicional -> . IF Comandos THEN
    (15) Condicional -> . IF THEN
    (16) Ciclo -> . DO Comandos LOOP
    (32) DeclaracaoF -> . NAME Comandos SEMICOLON
    (33) DeclaracaoV -> . VARIABLE
    (34) DeclaracaoV -> . EXCLAMATION
    (35) DeclaracaoV -> . AT

    $end            reduce using rule 3 (Comandos -> Comando .)
    ELSE            reduce using rule 3 (Comandos -> Comando .)
    THEN            reduce using rule 3 (Comandos -> Comando .)
    LOOP            reduce using rule 3 (Comandos -> Comando .)
    SEMICOLON       reduce using rule 3 (Comandos -> Comando .)
    DEFINED_WORD    shift and go to state 11
    INT             shift and go to state 12
    PLUS            shift and go to state 13
    MINUS           shift and go to state 14
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 16
    MOD             shift and go to state 17
    SUPEQ           shift and go to state 18
    INFEQ           shift and go to state 19
    INFERIOR        shift and go to state 20
    SUPERIOR        shift and go to state 21
    EQUALS          shift and go to state 22
    STRING          shift and go to state 25
    EMIT            shift and go to state 26
    DOT             shift and go to state 27
    CHAR            shift and go to state 28
    SPACE           shift and go to state 29
    SPACES          shift and go to state 30
    CR              shift and go to state 31
    KEY             shift and go to state 32
    DUP             shift and go to state 33
    2DUP            shift and go to state 34
    SWAP            shift and go to state 35
    DROP            shift and go to state 36
    IF              shift and go to state 37
    DO              shift and go to state 38
    NAME            shift and go to state 39
    VARIABLE        shift and go to state 40
    EXCLAMATION     shift and go to state 41
    AT              shift and go to state 42

    Comando                        shift and go to state 3
    Comandos                       shift and go to state 43
    Valores                        shift and go to state 4
    Operadores                     shift and go to state 5
    Declaracao                     shift and go to state 6
    Print                          shift and go to state 7
    Operacao                       shift and go to state 8
    Condicional                    shift and go to state 9
    Ciclo                          shift and go to state 10
    DeclaracaoF                    shift and go to state 23
    DeclaracaoV                    shift and go to state 24

state 4

    (4) Comando -> Valores .

    DEFINED_WORD    reduce using rule 4 (Comando -> Valores .)
    INT             reduce using rule 4 (Comando -> Valores .)
    PLUS            reduce using rule 4 (Comando -> Valores .)
    MINUS           reduce using rule 4 (Comando -> Valores .)
    TIMES           reduce using rule 4 (Comando -> Valores .)
    DIVIDE          reduce using rule 4 (Comando -> Valores .)
    MOD             reduce using rule 4 (Comando -> Valores .)
    SUPEQ           reduce using rule 4 (Comando -> Valores .)
    INFEQ           reduce using rule 4 (Comando -> Valores .)
    INFERIOR        reduce using rule 4 (Comando -> Valores .)
    SUPERIOR        reduce using rule 4 (Comando -> Valores .)
    EQUALS          reduce using rule 4 (Comando -> Valores .)
    STRING          reduce using rule 4 (Comando -> Valores .)
    EMIT            reduce using rule 4 (Comando -> Valores .)
    DOT             reduce using rule 4 (Comando -> Valores .)
    CHAR            reduce using rule 4 (Comando -> Valores .)
    SPACE           reduce using rule 4 (Comando -> Valores .)
    SPACES          reduce using rule 4 (Comando -> Valores .)
    CR              reduce using rule 4 (Comando -> Valores .)
    KEY             reduce using rule 4 (Comando -> Valores .)
    DUP             reduce using rule 4 (Comando -> Valores .)
    2DUP            reduce using rule 4 (Comando -> Valores .)
    SWAP            reduce using rule 4 (Comando -> Valores .)
    DROP            reduce using rule 4 (Comando -> Valores .)
    IF              reduce using rule 4 (Comando -> Valores .)
    DO              reduce using rule 4 (Comando -> Valores .)
    NAME            reduce using rule 4 (Comando -> Valores .)
    VARIABLE        reduce using rule 4 (Comando -> Valores .)
    EXCLAMATION     reduce using rule 4 (Comando -> Valores .)
    AT              reduce using rule 4 (Comando -> Valores .)
    $end            reduce using rule 4 (Comando -> Valores .)
    ELSE            reduce using rule 4 (Comando -> Valores .)
    THEN            reduce using rule 4 (Comando -> Valores .)
    LOOP            reduce using rule 4 (Comando -> Valores .)
    SEMICOLON       reduce using rule 4 (Comando -> Valores .)


state 5

    (5) Comando -> Operadores .

    DEFINED_WORD    reduce using rule 5 (Comando -> Operadores .)
    INT             reduce using rule 5 (Comando -> Operadores .)
    PLUS            reduce using rule 5 (Comando -> Operadores .)
    MINUS           reduce using rule 5 (Comando -> Operadores .)
    TIMES           reduce using rule 5 (Comando -> Operadores .)
    DIVIDE          reduce using rule 5 (Comando -> Operadores .)
    MOD             reduce using rule 5 (Comando -> Operadores .)
    SUPEQ           reduce using rule 5 (Comando -> Operadores .)
    INFEQ           reduce using rule 5 (Comando -> Operadores .)
    INFERIOR        reduce using rule 5 (Comando -> Operadores .)
    SUPERIOR        reduce using rule 5 (Comando -> Operadores .)
    EQUALS          reduce using rule 5 (Comando -> Operadores .)
    STRING          reduce using rule 5 (Comando -> Operadores .)
    EMIT            reduce using rule 5 (Comando -> Operadores .)
    DOT             reduce using rule 5 (Comando -> Operadores .)
    CHAR            reduce using rule 5 (Comando -> Operadores .)
    SPACE           reduce using rule 5 (Comando -> Operadores .)
    SPACES          reduce using rule 5 (Comando -> Operadores .)
    CR              reduce using rule 5 (Comando -> Operadores .)
    KEY             reduce using rule 5 (Comando -> Operadores .)
    DUP             reduce using rule 5 (Comando -> Operadores .)
    2DUP            reduce using rule 5 (Comando -> Operadores .)
    SWAP            reduce using rule 5 (Comando -> Operadores .)
    DROP            reduce using rule 5 (Comando -> Operadores .)
    IF              reduce using rule 5 (Comando -> Operadores .)
    DO              reduce using rule 5 (Comando -> Operadores .)
    NAME            reduce using rule 5 (Comando -> Operadores .)
    VARIABLE        reduce using rule 5 (Comando -> Operadores .)
    EXCLAMATION     reduce using rule 5 (Comando -> Operadores .)
    AT              reduce using rule 5 (Comando -> Operadores .)
    $end            reduce using rule 5 (Comando -> Operadores .)
    ELSE            reduce using rule 5 (Comando -> Operadores .)
    THEN            reduce using rule 5 (Comando -> Operadores .)
    LOOP            reduce using rule 5 (Comando -> Operadores .)
    SEMICOLON       reduce using rule 5 (Comando -> Operadores .)


state 6

    (6) Comando -> Declaracao .

    DEFINED_WORD    reduce using rule 6 (Comando -> Declaracao .)
    INT             reduce using rule 6 (Comando -> Declaracao .)
    PLUS            reduce using rule 6 (Comando -> Declaracao .)
    MINUS           reduce using rule 6 (Comando -> Declaracao .)
    TIMES           reduce using rule 6 (Comando -> Declaracao .)
    DIVIDE          reduce using rule 6 (Comando -> Declaracao .)
    MOD             reduce using rule 6 (Comando -> Declaracao .)
    SUPEQ           reduce using rule 6 (Comando -> Declaracao .)
    INFEQ           reduce using rule 6 (Comando -> Declaracao .)
    INFERIOR        reduce using rule 6 (Comando -> Declaracao .)
    SUPERIOR        reduce using rule 6 (Comando -> Declaracao .)
    EQUALS          reduce using rule 6 (Comando -> Declaracao .)
    STRING          reduce using rule 6 (Comando -> Declaracao .)
    EMIT            reduce using rule 6 (Comando -> Declaracao .)
    DOT             reduce using rule 6 (Comando -> Declaracao .)
    CHAR            reduce using rule 6 (Comando -> Declaracao .)
    SPACE           reduce using rule 6 (Comando -> Declaracao .)
    SPACES          reduce using rule 6 (Comando -> Declaracao .)
    CR              reduce using rule 6 (Comando -> Declaracao .)
    KEY             reduce using rule 6 (Comando -> Declaracao .)
    DUP             reduce using rule 6 (Comando -> Declaracao .)
    2DUP            reduce using rule 6 (Comando -> Declaracao .)
    SWAP            reduce using rule 6 (Comando -> Declaracao .)
    DROP            reduce using rule 6 (Comando -> Declaracao .)
    IF              reduce using rule 6 (Comando -> Declaracao .)
    DO              reduce using rule 6 (Comando -> Declaracao .)
    NAME            reduce using rule 6 (Comando -> Declaracao .)
    VARIABLE        reduce using rule 6 (Comando -> Declaracao .)
    EXCLAMATION     reduce using rule 6 (Comando -> Declaracao .)
    AT              reduce using rule 6 (Comando -> Declaracao .)
    $end            reduce using rule 6 (Comando -> Declaracao .)
    ELSE            reduce using rule 6 (Comando -> Declaracao .)
    THEN            reduce using rule 6 (Comando -> Declaracao .)
    LOOP            reduce using rule 6 (Comando -> Declaracao .)
    SEMICOLON       reduce using rule 6 (Comando -> Declaracao .)


state 7

    (7) Comando -> Print .

    DEFINED_WORD    reduce using rule 7 (Comando -> Print .)
    INT             reduce using rule 7 (Comando -> Print .)
    PLUS            reduce using rule 7 (Comando -> Print .)
    MINUS           reduce using rule 7 (Comando -> Print .)
    TIMES           reduce using rule 7 (Comando -> Print .)
    DIVIDE          reduce using rule 7 (Comando -> Print .)
    MOD             reduce using rule 7 (Comando -> Print .)
    SUPEQ           reduce using rule 7 (Comando -> Print .)
    INFEQ           reduce using rule 7 (Comando -> Print .)
    INFERIOR        reduce using rule 7 (Comando -> Print .)
    SUPERIOR        reduce using rule 7 (Comando -> Print .)
    EQUALS          reduce using rule 7 (Comando -> Print .)
    STRING          reduce using rule 7 (Comando -> Print .)
    EMIT            reduce using rule 7 (Comando -> Print .)
    DOT             reduce using rule 7 (Comando -> Print .)
    CHAR            reduce using rule 7 (Comando -> Print .)
    SPACE           reduce using rule 7 (Comando -> Print .)
    SPACES          reduce using rule 7 (Comando -> Print .)
    CR              reduce using rule 7 (Comando -> Print .)
    KEY             reduce using rule 7 (Comando -> Print .)
    DUP             reduce using rule 7 (Comando -> Print .)
    2DUP            reduce using rule 7 (Comando -> Print .)
    SWAP            reduce using rule 7 (Comando -> Print .)
    DROP            reduce using rule 7 (Comando -> Print .)
    IF              reduce using rule 7 (Comando -> Print .)
    DO              reduce using rule 7 (Comando -> Print .)
    NAME            reduce using rule 7 (Comando -> Print .)
    VARIABLE        reduce using rule 7 (Comando -> Print .)
    EXCLAMATION     reduce using rule 7 (Comando -> Print .)
    AT              reduce using rule 7 (Comando -> Print .)
    $end            reduce using rule 7 (Comando -> Print .)
    ELSE            reduce using rule 7 (Comando -> Print .)
    THEN            reduce using rule 7 (Comando -> Print .)
    LOOP            reduce using rule 7 (Comando -> Print .)
    SEMICOLON       reduce using rule 7 (Comando -> Print .)


state 8

    (8) Comando -> Operacao .

    DEFINED_WORD    reduce using rule 8 (Comando -> Operacao .)
    INT             reduce using rule 8 (Comando -> Operacao .)
    PLUS            reduce using rule 8 (Comando -> Operacao .)
    MINUS           reduce using rule 8 (Comando -> Operacao .)
    TIMES           reduce using rule 8 (Comando -> Operacao .)
    DIVIDE          reduce using rule 8 (Comando -> Operacao .)
    MOD             reduce using rule 8 (Comando -> Operacao .)
    SUPEQ           reduce using rule 8 (Comando -> Operacao .)
    INFEQ           reduce using rule 8 (Comando -> Operacao .)
    INFERIOR        reduce using rule 8 (Comando -> Operacao .)
    SUPERIOR        reduce using rule 8 (Comando -> Operacao .)
    EQUALS          reduce using rule 8 (Comando -> Operacao .)
    STRING          reduce using rule 8 (Comando -> Operacao .)
    EMIT            reduce using rule 8 (Comando -> Operacao .)
    DOT             reduce using rule 8 (Comando -> Operacao .)
    CHAR            reduce using rule 8 (Comando -> Operacao .)
    SPACE           reduce using rule 8 (Comando -> Operacao .)
    SPACES          reduce using rule 8 (Comando -> Operacao .)
    CR              reduce using rule 8 (Comando -> Operacao .)
    KEY             reduce using rule 8 (Comando -> Operacao .)
    DUP             reduce using rule 8 (Comando -> Operacao .)
    2DUP            reduce using rule 8 (Comando -> Operacao .)
    SWAP            reduce using rule 8 (Comando -> Operacao .)
    DROP            reduce using rule 8 (Comando -> Operacao .)
    IF              reduce using rule 8 (Comando -> Operacao .)
    DO              reduce using rule 8 (Comando -> Operacao .)
    NAME            reduce using rule 8 (Comando -> Operacao .)
    VARIABLE        reduce using rule 8 (Comando -> Operacao .)
    EXCLAMATION     reduce using rule 8 (Comando -> Operacao .)
    AT              reduce using rule 8 (Comando -> Operacao .)
    $end            reduce using rule 8 (Comando -> Operacao .)
    ELSE            reduce using rule 8 (Comando -> Operacao .)
    THEN            reduce using rule 8 (Comando -> Operacao .)
    LOOP            reduce using rule 8 (Comando -> Operacao .)
    SEMICOLON       reduce using rule 8 (Comando -> Operacao .)


state 9

    (9) Comando -> Condicional .

    DEFINED_WORD    reduce using rule 9 (Comando -> Condicional .)
    INT             reduce using rule 9 (Comando -> Condicional .)
    PLUS            reduce using rule 9 (Comando -> Condicional .)
    MINUS           reduce using rule 9 (Comando -> Condicional .)
    TIMES           reduce using rule 9 (Comando -> Condicional .)
    DIVIDE          reduce using rule 9 (Comando -> Condicional .)
    MOD             reduce using rule 9 (Comando -> Condicional .)
    SUPEQ           reduce using rule 9 (Comando -> Condicional .)
    INFEQ           reduce using rule 9 (Comando -> Condicional .)
    INFERIOR        reduce using rule 9 (Comando -> Condicional .)
    SUPERIOR        reduce using rule 9 (Comando -> Condicional .)
    EQUALS          reduce using rule 9 (Comando -> Condicional .)
    STRING          reduce using rule 9 (Comando -> Condicional .)
    EMIT            reduce using rule 9 (Comando -> Condicional .)
    DOT             reduce using rule 9 (Comando -> Condicional .)
    CHAR            reduce using rule 9 (Comando -> Condicional .)
    SPACE           reduce using rule 9 (Comando -> Condicional .)
    SPACES          reduce using rule 9 (Comando -> Condicional .)
    CR              reduce using rule 9 (Comando -> Condicional .)
    KEY             reduce using rule 9 (Comando -> Condicional .)
    DUP             reduce using rule 9 (Comando -> Condicional .)
    2DUP            reduce using rule 9 (Comando -> Condicional .)
    SWAP            reduce using rule 9 (Comando -> Condicional .)
    DROP            reduce using rule 9 (Comando -> Condicional .)
    IF              reduce using rule 9 (Comando -> Condicional .)
    DO              reduce using rule 9 (Comando -> Condicional .)
    NAME            reduce using rule 9 (Comando -> Condicional .)
    VARIABLE        reduce using rule 9 (Comando -> Condicional .)
    EXCLAMATION     reduce using rule 9 (Comando -> Condicional .)
    AT              reduce using rule 9 (Comando -> Condicional .)
    $end            reduce using rule 9 (Comando -> Condicional .)
    ELSE            reduce using rule 9 (Comando -> Condicional .)
    THEN            reduce using rule 9 (Comando -> Condicional .)
    LOOP            reduce using rule 9 (Comando -> Condicional .)
    SEMICOLON       reduce using rule 9 (Comando -> Condicional .)


state 10

    (10) Comando -> Ciclo .

    DEFINED_WORD    reduce using rule 10 (Comando -> Ciclo .)
    INT             reduce using rule 10 (Comando -> Ciclo .)
    PLUS            reduce using rule 10 (Comando -> Ciclo .)
    MINUS           reduce using rule 10 (Comando -> Ciclo .)
    TIMES           reduce using rule 10 (Comando -> Ciclo .)
    DIVIDE          reduce using rule 10 (Comando -> Ciclo .)
    MOD             reduce using rule 10 (Comando -> Ciclo .)
    SUPEQ           reduce using rule 10 (Comando -> Ciclo .)
    INFEQ           reduce using rule 10 (Comando -> Ciclo .)
    INFERIOR        reduce using rule 10 (Comando -> Ciclo .)
    SUPERIOR        reduce using rule 10 (Comando -> Ciclo .)
    EQUALS          reduce using rule 10 (Comando -> Ciclo .)
    STRING          reduce using rule 10 (Comando -> Ciclo .)
    EMIT            reduce using rule 10 (Comando -> Ciclo .)
    DOT             reduce using rule 10 (Comando -> Ciclo .)
    CHAR            reduce using rule 10 (Comando -> Ciclo .)
    SPACE           reduce using rule 10 (Comando -> Ciclo .)
    SPACES          reduce using rule 10 (Comando -> Ciclo .)
    CR              reduce using rule 10 (Comando -> Ciclo .)
    KEY             reduce using rule 10 (Comando -> Ciclo .)
    DUP             reduce using rule 10 (Comando -> Ciclo .)
    2DUP            reduce using rule 10 (Comando -> Ciclo .)
    SWAP            reduce using rule 10 (Comando -> Ciclo .)
    DROP            reduce using rule 10 (Comando -> Ciclo .)
    IF              reduce using rule 10 (Comando -> Ciclo .)
    DO              reduce using rule 10 (Comando -> Ciclo .)
    NAME            reduce using rule 10 (Comando -> Ciclo .)
    VARIABLE        reduce using rule 10 (Comando -> Ciclo .)
    EXCLAMATION     reduce using rule 10 (Comando -> Ciclo .)
    AT              reduce using rule 10 (Comando -> Ciclo .)
    $end            reduce using rule 10 (Comando -> Ciclo .)
    ELSE            reduce using rule 10 (Comando -> Ciclo .)
    THEN            reduce using rule 10 (Comando -> Ciclo .)
    LOOP            reduce using rule 10 (Comando -> Ciclo .)
    SEMICOLON       reduce using rule 10 (Comando -> Ciclo .)


state 11

    (11) Comando -> DEFINED_WORD .

    DEFINED_WORD    reduce using rule 11 (Comando -> DEFINED_WORD .)
    INT             reduce using rule 11 (Comando -> DEFINED_WORD .)
    PLUS            reduce using rule 11 (Comando -> DEFINED_WORD .)
    MINUS           reduce using rule 11 (Comando -> DEFINED_WORD .)
    TIMES           reduce using rule 11 (Comando -> DEFINED_WORD .)
    DIVIDE          reduce using rule 11 (Comando -> DEFINED_WORD .)
    MOD             reduce using rule 11 (Comando -> DEFINED_WORD .)
    SUPEQ           reduce using rule 11 (Comando -> DEFINED_WORD .)
    INFEQ           reduce using rule 11 (Comando -> DEFINED_WORD .)
    INFERIOR        reduce using rule 11 (Comando -> DEFINED_WORD .)
    SUPERIOR        reduce using rule 11 (Comando -> DEFINED_WORD .)
    EQUALS          reduce using rule 11 (Comando -> DEFINED_WORD .)
    STRING          reduce using rule 11 (Comando -> DEFINED_WORD .)
    EMIT            reduce using rule 11 (Comando -> DEFINED_WORD .)
    DOT             reduce using rule 11 (Comando -> DEFINED_WORD .)
    CHAR            reduce using rule 11 (Comando -> DEFINED_WORD .)
    SPACE           reduce using rule 11 (Comando -> DEFINED_WORD .)
    SPACES          reduce using rule 11 (Comando -> DEFINED_WORD .)
    CR              reduce using rule 11 (Comando -> DEFINED_WORD .)
    KEY             reduce using rule 11 (Comando -> DEFINED_WORD .)
    DUP             reduce using rule 11 (Comando -> DEFINED_WORD .)
    2DUP            reduce using rule 11 (Comando -> DEFINED_WORD .)
    SWAP            reduce using rule 11 (Comando -> DEFINED_WORD .)
    DROP            reduce using rule 11 (Comando -> DEFINED_WORD .)
    IF              reduce using rule 11 (Comando -> DEFINED_WORD .)
    DO              reduce using rule 11 (Comando -> DEFINED_WORD .)
    NAME            reduce using rule 11 (Comando -> DEFINED_WORD .)
    VARIABLE        reduce using rule 11 (Comando -> DEFINED_WORD .)
    EXCLAMATION     reduce using rule 11 (Comando -> DEFINED_WORD .)
    AT              reduce using rule 11 (Comando -> DEFINED_WORD .)
    $end            reduce using rule 11 (Comando -> DEFINED_WORD .)
    ELSE            reduce using rule 11 (Comando -> DEFINED_WORD .)
    THEN            reduce using rule 11 (Comando -> DEFINED_WORD .)
    LOOP            reduce using rule 11 (Comando -> DEFINED_WORD .)
    SEMICOLON       reduce using rule 11 (Comando -> DEFINED_WORD .)


state 12

    (29) Valores -> INT .
